added action for mobile menu
Signed-off-by: Leonardo Escuer <leoescuer@protonmail.com>

--- a/static/index.css
+++ b/static/index.css
@@ -1,136 +1,6 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* reset ends */
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0px;
 }
 
 header {
@@ -138,10 +8,12 @@ header {
   flex-direction: row;
   justify-content: space-between;
   background: lightblue;
-  margin: 5px;
-}
-header h3 {
-  margin: 0px 5px;
+  height: 6vh;
+  width: 100vw;
+  max-width: 100vw;
+  top: 0px;
+  position: fixed;
+  z-index: 20;
 }
 .nav {
   display: flex;
@@ -150,9 +22,68 @@ header h3 {
 }
 .nav li {
   margin: 0px 10px;
+  list-style: none;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
 }
 
 .h1 {
   color: aqua;
   font-family: "Times New Roman", Times, serif;
+}
+.welcome-div {
+  margin: 4em 0em;
+}
+
+.about-me {
+  text-align: center;
+}
+.about-header {
+  margin-bottom: 4em;
+}
+
+@media screen and (max-width: 768px) {
+  .nav {
+    position: absolute;
+    margin-top: 0px;
+    right: 0px;
+    height: 80vh;
+    top: 6vh;
+    background-color: lightblue;
+    display: none;
+  }
+  .nav li {
+    opacity: 1;
+  }
+
+  .burger {
+    display: block;
+    margin-right: 10px;
+    margin-top: 7px;
+  }
+  .close {
+    display: none;
+    margin-right: 10px;
+    margin-top: 7px;
+  }
+}
+
+.nav-active {
+  display: flex;
+  flex-direction: column;
+  align-items: centers;
+  width: 50%;
+  margin-right: 0px;
+}
+.nav-active li {
+  margin: 20px 0px;
+}
+.disapear {
+  display: none;
+}
+.appear {
+  display: block;
 }
