--- a/static/index.css
+++ b/static/index.css
@@ -18,7 +18,6 @@ header {
   flex-direction: row;
   justify-content: space-between;
   background-color: #212121de;
-  height: 6vh;
   width: 100vw;
   max-width: 100vw;
   top: 0px;
@@ -35,6 +34,12 @@ header a {
   padding-left: 1.5em;
   font-size: 2em;
 }
+
+.title-svg {
+ 
+  height: 60px;
+  width: auto;
+}
 header h3 {
   margin-left: 2em;
 }
@@ -44,6 +49,7 @@ header h3 {
 }
 .close {
   display: none;
+  cursor: pointer;
 }
 main div {
   display: flex;
@@ -173,6 +179,11 @@ button a {
     padding-top: 0.3em;
     padding-left: 1.5em;
     font-size: 1.5em;
+  }
+  .title-svg {
+ 
+    height: 60px;
+    width: auto;
   }
   .nav {
     position: absolute;
