fixed css and added links to websites
Signed-off-by: lescuer97 <leoescuer@protonmail.com>

--- a/static/index.css
+++ b/static/index.css
@@ -94,6 +94,11 @@ main div {
   font-size: 1.3em;
   margin-bottom: 4em;
 }
+.project-title {
+  font-size: 1.1em;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
 
 #title {
   text-align: center;
