--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -44,7 +44,7 @@ import '/public/index.css';
             </li>
             <li class="nav-link"><a href="#portafolio" class="link-button">Portafolio</a></li>
             <li class="nav-link"><a href="#contact" class="link-button">Contact</a></li>
-            <li class="nav-link"><a href="/" class="link-button">Blog</a></li>
+            <li class="nav-link"><a href="/blog" class="link-button">Blog</a></li>
         </ul>
         <!-- burger svg -->
 
@@ -70,7 +70,7 @@ import '/public/index.css';
         <a href="#">Home</a>
         <a href="#">Posts</a>
         <a href="#">Contact</a>
-        <a href="/">Blog</a>
+        <a href="/blog">Blog</a>
     </nav>
     <main>
         <slot /> <!-- your content is injected here -->
