--- a/public/index.css
+++ b/public/index.css
@@ -10,10 +10,16 @@ html {
 }
 
 body {
+  min-height: 100vh;
   font-family: "Montserrat", sans-serif;
   margin: 0px;
   color: #ffffff;
   background-color: var(--background);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-content: space-between; */
+  justify-content: space-between;
 }
 
 header {
@@ -25,7 +31,7 @@ header {
   width: 100vw;
   max-width: 100vw;
   top: 0px;
-  position: fixed;
+
   z-index: 20;
 }
 header a {
@@ -172,14 +178,22 @@ button a {
 #special-repository {
   margin-left: 20px;
 }
+
+.contactMe h1 h3 {
+  text-align: center;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5px;
+}
 .contactMe {
   padding-top: 8vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  /* width: 100vw; */
-}
-.contactMe h1 h3 {
-  text-align: center;
+  align-content: center;
 }
 .contactMe h4 {
   margin-bottom: 0em;
@@ -193,6 +207,8 @@ button a {
   display: flex;
   flex-direction: row;
   align-content: center;
+  align-items: center;
+  justify-content: center;
 }
 .icon {
   width: 2em;
