--- a/public/index.css
+++ b/public/index.css
@@ -60,6 +60,9 @@ header h3 {
   display: none;
   cursor: pointer;
 }
+main {
+  margin-top: 10rem;
+}
 main div {
   display: flex;
   flex-direction: column;
