--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,7 +13,7 @@ import '/public/index.css';
 
 <body>
     <header>
-        <a class="title" href="#"><svg class="title-svg" xmlns="http://www.w3.org/2000/svg"
+        <a class="title" href="/"><svg class="title-svg" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="3168.5393258426966"
                 height="932.3692651739389" viewBox="0 0 3168.5393258426966 932.3692651739389">
 
